support graalvm native image build